@@ -114,6 +114,9 @@ run_dump_test "reloc-3"
 if {$has_newabi} {
     run_dump_test "reloc-3-n32"
 }
+run_dump_test "reloc-4"
+run_dump_test "reloc-5"
+
 if {$has_newabi && $linux_gnu} {
     run_dump_test "eh-frame1-n32"
     run_dump_test "eh-frame1-n64"
